# svd2rust_example_stm32l0x1

./: Cargo.toml  README.md
src/: main.rs
